--- a/html/banner.html
+++ b/html/banner.html
@@ -86,9 +86,10 @@
               <div class="circle circle-3"><img src="../imgs/circlerotation-3.png" alt="원형 이미지"></div>
             </div>
           </div>
-
         </div>
       </section>
+
+      <section class="lem"></section>
     </main>
   </div>
 
@@ -98,8 +99,14 @@
       overflow: hidden;
     }
 
+    .lem {
+      width: 100vw;
+      height: 100vh;
+    }
+
     .sec-1-banner>.container {
       width: 100vw;
+      min-width: 450px;
       height: 100vh;
       display: flex;
       justify-content: center;
@@ -237,8 +244,8 @@
 
     .sec-2-vision>.container {
       width: 100vw;
+      min-width: 450px;
       height: 100vh;
-      outline: 2px solid blue;
       position: relative;
     }
 
@@ -264,17 +271,17 @@
     .sec-2-vision .container .wrap .text {
       color: #fff;
       font-weight: 700;
-      font-size: clamp(1px, 2.08vw, 40px);
+      font-size: clamp(18px, 2.08vw, 40px);
       position: absolute;
       left: 50%;
-      top: 48%;
+      top: calc(50% - 1.1vw);
       transform: translate(-50%, -50%);
       text-align: center;
       white-space: nowrap;
     }
 
     .sec-2-vision .container .wrap .text span {
-      font-size: clamp(1px, 4.69vw, 90px);
+      font-size: clamp(40px, 4.69vw, 90px);
       font-weight: 700;
     }
 
@@ -298,17 +305,17 @@
       z-index: -5;
     }
 
-    .sec-2-vision .wrap .bg-box .circle {
-      width: clamp(1px, 66.51vw, 1277px);
+    .sec-2-vision .container .wrap .bg-box .circle {
+      width: clamp(740px, 66.51vw, 1277px);
       aspect-ratio: 1/1;
-      position: absolute;
-      left: 50%;
-      top: 50%;
+      position: absolute !important;
+      left: 50% !important;
+      top: 50% !important;
       transform: translate(-50%, -50%);
       z-index: -4;
     }
 
-    /* @media (max-width:1000px) {
+    @media (max-width:768px) {
       .sec-1-banner>.container {
         display: block;
         padding: 100px 40px;
@@ -332,6 +339,7 @@
         justify-content: flex-start;
         gap: 20px;
         margin-top: 20px;
+        flex-wrap: wrap;
       }
 
       .sec-1-banner .content>div:nth-child(2)>div>span {
@@ -343,12 +351,20 @@
       .sec-1-banner .content>div:nth-child(2)>div>span::after {
         margin-right: unset;
       }
-    } */
+
+      .sec-2-vision>.container {
+        height: 600px;
+      }
+
+      .sec-2-vision .container .index {
+        opacity: 1;
+      }
+    }
   </style>
 
   <script>
 
-
+    //배너 마우스 따라 움직임
     function MousemoveEffect1__start() {
       const $window = $(window);
 
@@ -405,80 +421,111 @@
     }
     MousemoveEffect1__start();
 
-
-
     gsap.registerPlugin(ScrollTrigger);
+
+
+
 
     let animateSlideInit = gsap.timeline();
 
-    animateSlideInit.from('.animate__slideInDown_1', {
-      delay: 0.4,
-      duration: 0.6,
-      yPercent: 100,
-    }, 0)
-      .from('.animate__slideInUp_1', {
-        delay: 0.8,
-        duration: 0.6,
-        yPercent: -100,
-      }, 0)
-      .from('.animate__slideInDown_2', {
-        delay: 1.2,
-        duration: 0.6,
-        yPercent: 100,
-      }, 0)
-      .from('.animate__slideInUp_2', {
+    //타이틀 슬라이드 이팩트
+    function titleSlide() {
+      animateSlideInit.from('.animate__slideInDown_1', {
         delay: 0.4,
         duration: 0.6,
         yPercent: 100,
-      }, 0);
+      }, 0)
+        .from('.animate__slideInUp_1', {
+          delay: 0.8,
+          duration: 0.6,
+          yPercent: -100,
+        }, 0)
+        .from('.animate__slideInDown_2', {
+          delay: 1.2,
+          duration: 0.6,
+          yPercent: 100,
+        }, 0)
+        .from('.animate__slideInUp_2', {
+          delay: 0.4,
+          duration: 0.6,
+          yPercent: 100,
+        }, 0);
+    }
+    titleSlide();
 
-
-    gsap.timeline({
-      scrollTrigger: {
-        trigger: ".banner-index-follow",
-        start: 'center center',
-        endTrigger: '.sec-2-vision',
-        end: "center center",
-        scrub: 1,
-        // markers: true,
-        pin: true,
-      }
-    })
-      .to(".banner-index-follow", { "scale": 0.5, })
-      .to(".animate__slideInUp_2", { y: 100 }, { duration: 2 });
-
+    //섹션2 원 애니메이션
     function sec2CircleAni() {
-      var $this = $('.sec-2-vision .bg-box .circle');
-      gsap.fromTo($this, { "rotation": "0", xPercent: -50, yPercent: -50 }, { "rotation": 360, xPercent: -50, yPercent: -50, duration: 7, repeat: -1, ease: "none" });
+      gsap.fromTo('.sec-2-vision .bg-box .circle', { "rotation": "0", xPercent: -50, yPercent: -50 }, { "rotation": 360, xPercent: -50, yPercent: -50, duration: 7, repeat: -1, ease: "none" });
     }
-
-    function sec2InitAni() {
-      gsap.timeline({
-        scrollTrigger: {
-          trigger: ".sec-2-vision",
-          start: "top top",
-          end: "+=200%",
-          markers: true,
-          scrub: 1,
-          pin: true,
-        }
-      })
-        .to(".sec-2-vision .container .wrap", { "clip-path": "circle(100%)", "duration":6, "delay":1 });
-
-      gsap.timeline({
-        scrollTrigger: {
-          trigger: ".sec-2-vision",
-          start: "top top",
-          end: "top top",
-          scrub:true,
-        }
-      })
-        .to(".sec-2-vision .container .index", { "opacity": "1", duration: 0.001 })
-        .to(".banner-index-follow", { "opacity": "0", duration: 0.001 }, "<")
-    }
-
     sec2CircleAni();
-    sec2InitAni();
+
+
+    let mm = gsap.matchMedia();
+
+    mm.add("(min-width : 768px)", () => {
+      //타이틀 따라가는 효과
+      function titleAniInit() {
+        gsap.timeline({
+          scrollTrigger: {
+            trigger: ".banner-index-follow",
+            start: 'center center',
+            endTrigger: '.sec-2-vision',
+            end: "center center",
+            scrub: 1,
+            // markers: true,
+            pin: true,
+          }
+        })
+          .to(".banner-index-follow", { "scale": 0.5, })
+          .to(".animate__slideInUp_2", { y: 100 }, { duration: 2 });
+      }
+      titleAniInit();
+
+      //타이틀 2섹션 진입 트렌지션 효과
+      function sec2InitAni() {
+        gsap.timeline({
+          scrollTrigger: {
+            trigger: ".sec-2-vision",
+            start: "top top",
+            end: "+=200%",
+            markers: true,
+            scrub: 1,
+            pin: true,
+          }
+        })
+          .to(".sec-2-vision .container .wrap", { "clipPath": "circle(100%)", "duration": 6, "delay": 1 });
+
+        gsap.timeline({
+          scrollTrigger: {
+            trigger: ".sec-2-vision",
+            start: "top top",
+            end: "top top",
+            scrub: true,
+          }
+        })
+          .to(".sec-2-vision .container .index", { "opacity": "1", duration: 0.001 })
+          .to(".banner-index-follow", { "opacity": "0", duration: 0.001 }, "<");
+      }
+      sec2InitAni();
+    });
+
+    mm.add("(max-width : 767px)", () => {
+      function sec2InitAni() {
+        gsap.timeline({
+          scrollTrigger: {
+            trigger: ".sec-2-vision",
+            start: "top 20%",
+            end: "top top",
+            markers: true,
+          }
+        })
+          .to(".sec-2-vision .container .wrap", { "clipPath": "circle(100%)", "duration": 0.6, ease: "power1.in" });
+      }
+      sec2InitAni();
+    });
+
+
+
   </script>
 </body>
 
