--- a/html/sec-1-2-banner.html
+++ b/html/sec-1-2-banner.html
@@ -89,7 +89,7 @@
         </div>
       </section>
 
-      <section class="lem"></section>
+      <section class="sec-blank"></section>
     </main>
   </div>
 
@@ -99,7 +99,7 @@
       overflow: hidden;
     }
 
-    .lem {
+    .sec-blank {
       width: 100vw;
       height: 100vh;
     }
